--- a/loan.html
+++ b/loan.html
@@ -105,7 +105,8 @@
 				<label>Monthly Payment ($):</label>
 				<input id="monthly" value="Total" />
 			</p>
-			<label><button type="button" onclick="Calendar()">Download Calendar</button></label>
+			<label><button type="button" onclick="cal.download('Schedule')">Download Calendar</button></label>
+			<label><button type="button" onclick="Sheet()">Download Sheet</button></label>
 		</fieldset>
 		<!--CALCULATOR ENDS-->
 	</div>
