--- a/Savings.html
+++ b/Savings.html
@@ -119,7 +119,7 @@
 					<table align="center" id="table">
 						<thead>
 							<tr>
-								<th id="header" colspan="6"><h1>Loan Payment Table</h1></th>
+								<th id="header" colspan="6"><h1>Savings Payment Table</h1></th>
 							</tr>
 							<tr>
 								<td>Period</td>
@@ -181,12 +181,6 @@
 		</div>
 	</div><! --/footerwrap -->
 	
-	
-
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
   </body>
