--- a/loan.html
+++ b/loan.html
@@ -30,15 +30,6 @@
     <!-- Custom styles for this template -->
     <link href="assets/css/style.css" rel="stylesheet">
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
-
-    <!-- Just for debugging purposes. Don't actually copy this line! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
   </head>
 
   <body>
@@ -114,6 +105,7 @@
 	<!---Here Javascript will generate the bar chart -->
 		<canvas id="mainChart"></canvas>
 
+<!--Bottom Table STARTS-->
 	<!--- Here Javascript will generate the table-->
 	<div>
 		<table align="center" id="table">
@@ -134,6 +126,7 @@
 		</table>
 	</div>
 	<!-- Javascript generated table ENDS-->
+	<!--Bottom Table ENDS-->
 </body>
 
 	
@@ -183,10 +176,6 @@
 	</div><! --/footerwrap -->
 	
 
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
   </body>
