--- a/Contact.html
+++ b/Contact.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -59,79 +59,80 @@
 		<div class="row centered mt mb">
 			<div class="col-lg-8 col-lg-offset-2">
 				<!--TOP Text STARTS-->
-			<div class="">
-			  <h3>Contacts Us</h3>
-			  <p>Contacts us for more information or any problems / concerns.</p>
-		<!--TOP Text ENDS-->	
-			
-		<!--CONTACTS STARTS-->
-			  <fieldset>
-		        <p>
-				<!--Full name in a input text-->
-				<form action="/action_page.php"> Full Name: <input type="text" name="FullName" value=""><br>
-		        <!--Email-->
-		        Email: <input type="text" name="Email" value=""><br>
-		       	<!--Subject-->
-		       	Subject: <input type="text" name="Subject" value=""><br>
-		       	<!--Text Box that will expand but wont retact back to normal-->
-		        Comments or Concerns / Problems: <textarea rows="5" cols="70"></textarea><br>
-		      </br>
-				<!--Submit and Reset Buttons-->
-				<label><button type="button" onclick="Submit()">Submit</button></label>
-				<label><button type="reset" onclick="Reset()">Clear</button></label>
-				</p>
-		<!--CONTACTS ENDS-->
-</div>
-      </fieldset>
-    </form>
-	
-	<div id="social">
-		<div class="">
-			<div class="row centered">
-				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-dribbble"></i></a>
-				</div>
-				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-facebook"></i></a>
-				</div>
-				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-twitter"></i></a>
-				</div>
-				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-linkedin"></i></a>
-				</div>
-				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-instagram"></i></a>
-				</div>
-				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-tumblr"></i></a>
-				</div>
-			
-			</div><! --/row -->
-		</div><! --/container -->
-	</div><! --/social -->
+				<div class="">
+					<h3>Contacts Us</h3>
+					<p>Contacts us for more information or any problems / concerns.</p>
+					<!--TOP Text ENDS-->
+					<!--CONTACTS STARTS-->
+					<fieldset>
+						<p>
+							<!--Full name in a input text-->
+							<form action="/action_page.php">
+								Full Name: <input type="text" name="FullName" value=""><br>
+								<!--Email-->
+								Email: <input type="text" name="Email" value=""><br>
+								<!--Subject-->
+								Subject: <input type="text" name="Subject" value=""><br>
+								<!--Text Box that will expand but wont retact back to normal-->
+								Comments or Concerns / Problems: <textarea rows="5" cols="70"></textarea><br>
+								</br>
+								<!--Submit and Reset Buttons-->
+								<label><button type="button" onclick="Submit()">Submit</button></label>
+								<label><button type="reset" onclick="Reset()">Clear</button></label>
 
-	<div id="footerwrap">
-		<div class="">
-			<div class="row centered">
-				<div class="col-lg-4">
-					<p><b>Calculator</b></p>
+								<!--CONTACTS ENDS-->
+							</form>
+						</p>
+					</fieldset>
 				</div>
-			
-				<div class="col-lg-4">
-					<!--Copyrights-->
-				<p>
-					&copy; Copyright IT485 Spring Group 4
-				</p>
-				</div>
-			
-			</div>
-		
-		</div>
-	</div><! --/footerwrap -->
-	
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-  </body>
+				<div id="social">
+					<div class="">
+						<div class="row centered">
+							<div class="col-lg-2">
+								<a href="#"><i class="fa fa-dribbble"></i></a>
+							</div>
+							<div class="col-lg-2">
+								<a href="#"><i class="fa fa-facebook"></i></a>
+							</div>
+							<div class="col-lg-2">
+								<a href="#"><i class="fa fa-twitter"></i></a>
+							</div>
+							<div class="col-lg-2">
+								<a href="#"><i class="fa fa-linkedin"></i></a>
+							</div>
+							<div class="col-lg-2">
+								<a href="#"><i class="fa fa-instagram"></i></a>
+							</div>
+							<div class="col-lg-2">
+								<a href="#"><i class="fa fa-tumblr"></i></a>
+							</div>
+
+						</div><! --/row -->
+					</div><! --/container -->
+				</div><! --/social -->
+
+				<div id="footerwrap">
+					<div class="">
+						<div class="row centered">
+							<div class="col-lg-4">
+								<p><b>Calculator</b></p>
+							</div>
+
+							<div class="col-lg-4">
+								<!--Copyrights-->
+								<p>
+									&copy; Copyright IT485 Spring Group 4
+								</p>
+							</div>
+
+						</div>
+
+					</div>
+				</div><! --/footerwrap -->
+
+
+				<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+				<script src="assets/js/bootstrap.min.js"></script>
+</body>
 </html>
