--- a/Contact.html
+++ b/Contact.html
@@ -1,23 +1,26 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="assets/ico/favicon.ico">
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="">
+	<meta name="author" content="">
+	<link rel="shortcut icon" href="assets/ico/favicon.ico">
 
-    <title>Contact Us</title>
+	<title>Contact Us</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="assets/css/bootstrap.css" rel="stylesheet">
+	<!-- Bootstrap core CSS -->
+	<link href="assets/css/bootstrap.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="assets/css/style.css" rel="stylesheet">
-    <link href="assets/css/font-awesome.min.css" rel="stylesheet">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+	<script src="assets/js/bootstrap.min.js"></script>
 
-  </head>
+	<!-- Custom styles for this template -->
+	<link href="assets/css/style.css" rel="stylesheet">
+	<link href="assets/css/font-awesome.min.css" rel="stylesheet">
+
+</head>
 
   <body>
 
@@ -53,7 +56,7 @@
 				</div>
 			</div><! --/row -->
 	    </div> <!-- /container -->
-	</div><! --/contactwrap -->
+	</div><!--/contactwrap -->
 	
 	<div class="container">
 		<div class="row centered mt mb">
@@ -85,6 +88,15 @@
 						</p>
 					</fieldset>
 				</div>
+
+				<!--Google Maps-->
+				<iframe width="100%" 
+						height="450" 
+						frameborder="0" 
+						style="border:0" 
+						src="https://www.google.com/maps/embed/v1/place?q=Umass%20Boston&key=AIzaSyDywOI116P7JNx2q7_h8SnfxVPw3xi1Dhc" allowfullscreen>
+				</iframe>
+
 
 				<div id="social">
 					<div class="">
@@ -132,7 +144,5 @@
 				</div><! --/footerwrap -->
 
 
-				<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-				<script src="assets/js/bootstrap.min.js"></script>
 </body>
 </html>
