--- a/loan.html
+++ b/loan.html
@@ -48,7 +48,8 @@
           <a class="navbar-brand" href="home.html"></a>
         </div>
         <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
+        	<!--changed the navbar-right to navbar-left and that allowed it to moved it to the left as a default-->
+          <ul class="nav navbar-nav navbar-left">
             <li class="active"><a href="Home.html">Home</a></li>
             <li><a href="Contact.html">Contact Us</a></li>
             
