--- a/Home.html
+++ b/Home.html
@@ -51,6 +51,8 @@
 	    <div class="">
 			<div class="row">
 				<div class="col-lg-6 col-lg-offset-3">
+					<!--Logo Image to the home page-->
+					<img src="assets/img/logo.jpg" alt="Logo" align="middle">
 					<h4></h4>
 					<h1></h1>
 					<h4></h4>
