--- a/Savings.html
+++ b/Savings.html
@@ -33,6 +33,9 @@
 
 </head>
 
+	<!--Logo Image to the home page-->
+	<img src="assets/img/logo.jpg" alt="Logo" align="middle">
+
   <body>
 
       <!-- Static navbar -->
@@ -50,7 +53,7 @@
         </div>
         <div class="navbar-collapse collapse">
         	<!--changed the navbar-right to navbar-left and that allowed it to moved it to the left as a default-->
-          <ul class="nav navbar-nav navbar-left">
+          <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="Home.html">Home</a></li>
             <li><a href="Contact.html">Contact Us</a></li>
             
@@ -132,6 +135,7 @@
 </body>
 
 	
+	<!--Social Media-->
 	<div id="social">
 		<div class="">
 			<div class="row centered">
