--- a/loan.html
+++ b/loan.html
@@ -32,6 +32,9 @@
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
   </head>
 
+	<!--Logo Image to the home page-->
+	<img src="assets/img/logo.jpg" alt="Logo" align="middle">
+
   <body>
 
       <!-- Static navbar -->
@@ -49,7 +52,7 @@
         </div>
         <div class="navbar-collapse collapse">
         	<!--changed the navbar-right to navbar-left and that allowed it to moved it to the left as a default-->
-          <ul class="nav navbar-nav navbar-left">
+          <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="Home.html">Home</a></li>
             <li><a href="Contact.html">Contact Us</a></li>
             
@@ -128,6 +131,7 @@
 </body>
 
 	
+	<!--Social Media-->
 	<div id="social">
 		<div class="">
 			<div class="row centered">
@@ -173,8 +177,8 @@
 		</div>
 	</div><! --/footerwrap -->
 	
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
   </body>
 </html>
+
