--- a/Contact.html
+++ b/Contact.html
@@ -22,6 +22,9 @@
 
 </head>
 
+	<!--Logo Image to the home page-->
+	<img src="assets/img/logo.jpg" alt="Logo" align="middle">
+	
   <body>
 
       <!-- Static navbar -->
@@ -39,7 +42,7 @@
         </div>
         <div class="navbar-collapse collapse">
         	<!--changed the navbar-right to navbar-left and that allowed it to moved it to the left as a default-->
-          <ul class="nav navbar-nav navbar-left">
+          <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="Home.html">Home</a></li>
             <li><a href="Contact.html">Contact Us</a></li>
             
@@ -144,6 +147,7 @@
 					</div>
 				</div><! --/footerwrap -->
 
-
-</body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
+  </body>
 </html>
