--- a/Home.html
+++ b/Home.html
@@ -18,7 +18,10 @@
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
 
   </head>
-
+	
+	<!--Logo Image to the home page-->
+	<img src="assets/img/logo.jpg" alt="Logo" align="middle">
+	
   <body>
 
     <!-- Static navbar -->
@@ -36,12 +39,12 @@
         </div>
         <div class="navbar-collapse collapse">
         	<!--changed the navbar-right to navbar-left and that allowed it to moved it to the left as a default-->
-          <ul class="nav navbar-nav navbar-left">
+          <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="Home.html">Home</a></li>
             <li><a href="Contact.html">Contact Us</a></li>
             
           </ul>
-        </div><!--/.nav-collapse -->
+        </div><!--/nav-collapse -->
       </div>
     </div>
 
@@ -51,10 +54,8 @@
 	    <div class="">
 			<div class="row">
 				<div class="col-lg-6 col-lg-offset-3">
-					<!--Logo Image to the home page-->
-					<img src="assets/img/logo.jpg" alt="Logo" align="middle">
 					<h4></h4>
-					<h1></h1>
+					<h1>Welcome to HAB</h1>
 					<h4></h4>
 				</div>
 			</div><! --/row -->
