--- a/Interest.html
+++ b/Interest.html
@@ -31,7 +31,9 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <!--JavaScript ENDS-->
 
-
+	<!--Logo Image to the home page-->
+	<img src="assets/img/logo.jpg" alt="Logo" align="middle">
+	
   <body>
 
       <!-- Static navbar -->
@@ -49,7 +51,7 @@
         </div>
         <div class="navbar-collapse collapse">
         	<!--changed the navbar-right to navbar-left and that allowed it to moved it to the left as a default-->
-          <ul class="nav navbar-nav navbar-left">
+          <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="Home.html">Home</a></li>
             <li><a href="Contact.html">Contact Us</a></li>
             
