--- a/Home.html
+++ b/Home.html
@@ -42,13 +42,15 @@
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="Home.html">Home</a></li>
             <li><a href="Contact.html">Contact Us</a></li>
-            
+             <!--Used to put the Home and Contact Us to the right but have a problem now 
+            	all the text in the page is a hyperlinked blue, but the link goes to nowhere-->
+            <li style="float:right"><a class="active"</a></li>
           </ul>
         </div><!--/nav-collapse -->
       </div>
     </div>
 
-<!--Home Top Wrap Image and Section-->
+	<!--Home Top Wrap Image and Section-->
 	<div id="homewrap">
 		 <!--It created a white oval. container is on-->
 	    <div class="">
