--- a/loan.html
+++ b/loan.html
@@ -55,6 +55,9 @@
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="Home.html">Home</a></li>
             <li><a href="Contact.html">Contact Us</a></li>
+            <!--Used to put the Home and Contact Us to the right but have a problem now 
+            	all the text in the page is a hyperlinked blue, but the link goes to nowhere-->
+            <li style="float:right"><a class="active"</a></li>
             
           </ul>
         </div><!--/.nav-collapse -->
