--- a/Contact.html
+++ b/Contact.html
@@ -134,7 +134,10 @@
 					<div class="">
 						<div class="row centered">
 							<div class="col-lg-4">
-								<p><b>Calculator</b></p>
+				<p><b>
+				<!--Logo Image to the home page-->
+				<img src="assets/img/logo.jpg" alt="Logo" align="middle">
+				</b></p>
 							</div>
 
 							<div class="col-lg-4">
