--- a/Contact.html
+++ b/Contact.html
@@ -104,31 +104,29 @@
 						src="https://www.google.com/maps/embed/v1/place?q=Umass%20Boston&key=AIzaSyDywOI116P7JNx2q7_h8SnfxVPw3xi1Dhc" allowfullscreen>
 				</iframe>
 				
-				<div id="social">
-					<div class="">
-						<div class="row centered">
-							<div class="col-lg-2">
-								<a href="#"><i class="fa fa-dribbble"></i></a>
-							</div>
-							<div class="col-lg-2">
-								<a href="#"><i class="fa fa-facebook"></i></a>
-							</div>
-							<div class="col-lg-2">
-								<a href="#"><i class="fa fa-twitter"></i></a>
-							</div>
-							<div class="col-lg-2">
-								<a href="#"><i class="fa fa-linkedin"></i></a>
-							</div>
-							<div class="col-lg-2">
-								<a href="#"><i class="fa fa-instagram"></i></a>
-							</div>
-							<div class="col-lg-2">
-								<a href="#"><i class="fa fa-tumblr"></i></a>
-							</div>
-
-						</div><! --/row -->
-					</div><! --/container -->
-				</div><! --/social -->
+	<!--Social Media-->
+	<div id="social">
+		<div class="">
+			<div class="row centered">
+				<div class="col-lg-2">
+					<a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a>
+				</div>
+				<div class="col-lg-2">
+					<a href="https://twitter.com/?lang=en"><i class="fa fa-twitter"></i></a>
+				</div>
+				<div class="col-lg-2">
+					<a href="https://www.linkedin.com/"><i class="fa fa-linkedin"></i></a>
+				</div>
+				<div class="col-lg-2">
+					<a href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a>
+				</div>
+				<div class="col-lg-2">
+					<a href="https://www.tumblr.com/"><i class="fa fa-tumblr"></i></a>
+				</div>
+			
+			</div><! --/row -->
+		</div><! --/container -->
+	</div><! --/social -->
 
 				<div id="footerwrap">
 					<div class="">
