--- a/Savings.html
+++ b/Savings.html
@@ -33,9 +33,6 @@
 
 </head>
 
-	<!--Logo Image to the home page-->
-	<img src="assets/img/logo.jpg" alt="Logo" align="middle">
-
   <body>
 
       <!-- Static navbar -->
@@ -52,6 +49,8 @@
           <a class="navbar-brand" href="home.html"></a>
         </div>
         <div class="navbar-collapse collapse">
+        <!--Logo Image to the home page-->
+			<img src="assets/img/logo.jpg" alt="Logo" align="">	
         	<!--changed the navbar-right to navbar-left and that allowed it to moved it to the left as a default-->
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="Home.html">Home</a></li>
@@ -65,6 +64,7 @@
       </div>
     </div>
 
+<!--Saving Wrap-->
 	<div id="savingswrap">
 		<!--It created a white oval. container is on-->
 	    <div class="">
