--- a/loan.html
+++ b/loan.html
@@ -32,9 +32,6 @@
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
   </head>
 
-	<!--Logo Image to the home page-->
-	<img src="assets/img/logo.jpg" alt="Logo" align="middle">
-
   <body>
 
       <!-- Static navbar -->
@@ -51,6 +48,8 @@
           <a class="navbar-brand" href="home.html"></a>
         </div>
         <div class="navbar-collapse collapse">
+        	<!--Logo Image to the home page-->
+			<img src="assets/img/logo.jpg" alt="Logo" align="">
         	<!--changed the navbar-right to navbar-left and that allowed it to moved it to the left as a default-->
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="Home.html">Home</a></li>
@@ -64,7 +63,7 @@
       </div>
     </div>
 
-
+	<!--Loans Wrap-->
 	<div id="loanswrap">
 		 <!--It created a white oval. container is on-->
 	    <div class="">
