--- a/Contact.html
+++ b/Contact.html
@@ -22,9 +22,6 @@
 
 </head>
 
-	<!--Logo Image to the home page-->
-	<img src="assets/img/logo.jpg" alt="Logo" align="middle">
-	
   <body>
 
       <!-- Static navbar -->
@@ -41,6 +38,8 @@
           <a class="navbar-brand" href="home.html"></a>
         </div>
         <div class="navbar-collapse collapse">
+        	<!--Logo Image to the home page-->
+			<img src="assets/img/logo.jpg" alt="Logo" align="">
         	<!--changed the navbar-right to navbar-left and that allowed it to moved it to the left as a default-->
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="Home.html">Home</a></li>
@@ -54,7 +53,7 @@
       </div>
     </div>
 
-
+<!--Contact Wraps-->
 	<div id="contactwrap">
 		 <!--It created a white oval. container is on-->
 	    <div class="">
