--- a/Home.html
+++ b/Home.html
@@ -21,10 +21,7 @@
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
 
 </head>
-	
-	<!--Logo Image to the home page-->
-	<img src="assets/img/logo.jpg" alt="Logo" align="middle">
-	
+
   <body>
 
     <!-- Static navbar -->
@@ -41,6 +38,8 @@
           <a class="navbar-brand" href="home.html"></a>
         </div>
         <div class="navbar-collapse collapse">
+        	<!--Logo Image to the home page-->
+			<img src="assets/img/logo.jpg" alt="Logo" align="">
         	<!--changed the navbar-right to navbar-left and that allowed it to moved it to the left as a default-->
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="Home.html">Home</a></li>
