--- a/Contact.html
+++ b/Contact.html
@@ -59,6 +59,9 @@
 	    <div class="">
 			<div class="row">
 				<div class="col-lg-6 col-lg-offset-3">
+					<h4>Contacts us for more information or any problems / concerns.</h4>
+					<h1>HAB</h1>
+					<h4>Our Service is Free</h4>
 				</div>
 			</div><! --/row -->
 	    </div> <!-- /container -->
@@ -70,7 +73,7 @@
 				<!--TOP Text STARTS-->
 				<div class="">
 					<h3>Contacts Us</h3>
-					<p>Contacts us for more information or any problems / concerns.</p>
+					<p></p>
 					<!--TOP Text ENDS-->
 					<!--CONTACTS STARTS-->
 					<fieldset>
