--- a/Home.html
+++ b/Home.html
@@ -61,7 +61,7 @@
 				<div class="col-lg-6 col-lg-offset-3">
 					<h4></h4>
 					<h1>Welcome to HAB</h1>
-					<h4></h4>
+					<h4>Free Service for Broke College Students</h4>
 				</div>
 			</div><! --/row -->
 	    </div> <!-- /container -->
