--- a/Savings.html
+++ b/Savings.html
@@ -70,6 +70,9 @@
 	    <div class="">
 			<div class="row">
 				<div class="col-lg-6 col-lg-offset-3">
+					<h4>Help yourself and Save some Money</h4>
+					<h1>HAB</h1>
+					<h4>Our Service is Free</h4>
 				</div>
 			</div><! --/row -->
 	    </div> <!-- /container -->
@@ -79,11 +82,13 @@
 	<div class="container">
 		<div class="row centered mt mb">
 			<div class="col-lg-8 col-lg-offset-2">
+					
 				<!--TOP Text STARTS -->
 				<div class="">
 					<h3>Savings Calculator</h3>
 					<p>Saving your money is important</p>
 					<!--TOP Text ENDS-->
+					
 					<!--CALCULATOR STARTS-->
 					<fieldset>
 						<!--<legend>Input</legend>-->
