--- a/loan.html
+++ b/loan.html
@@ -70,6 +70,9 @@
 			<div class="row">
 				<div class="col-lg-6 col-lg-offset-3">
 				</div>
+				<h4>Manage your Loans</h4>
+					<h1>HAB</h1>
+					<h4>Our Service is Free</h4>
 			</div><! --/row -->
 	    </div> <!-- /container -->
 	</div><! --/loanswrap -->
