--- a/Savings.html
+++ b/Savings.html
@@ -64,7 +64,7 @@
       </div>
     </div>
 
-<!--Saving Wrap-->
+	<!--Saving Wrap STARTS-->
 	<div id="savingswrap">
 		<!--It created a white oval. container is on-->
 	    <div class="">
@@ -82,7 +82,7 @@
 	<div class="container">
 		<div class="row centered mt mb">
 			<div class="col-lg-8 col-lg-offset-2">
-					
+		<!--Saving Wrap ENDS-->
 				<!--TOP Text STARTS -->
 				<div class="">
 					<h3>Savings Calculator</h3>
@@ -143,7 +143,7 @@
 </body>
 
 	
-	<!--Social Media-->
+	<!--Social Media STARTS-->
 	<div id="social">
 		<div class="">
 			<div class="row centered">
@@ -166,7 +166,9 @@
 			</div><! --/row -->
 		</div><! --/container -->
 	</div><! --/social -->
+	<!--Social Media ENDS-->
 
+	<!--Footer Wrap-->
 	<div id="footerwrap">
 		<div class="">
 			<div class="row centered">
