--- a/loan.html
+++ b/loan.html
@@ -63,7 +63,7 @@
       </div>
     </div>
 
-	<!--Loans Wrap-->
+	<!--Loans Wrap STARTS-->
 	<div id="loanswrap">
 		 <!--It created a white oval. container is on-->
 	    <div class="">
@@ -80,6 +80,8 @@
 	<div class="container">
 		<div class="row centered mt mb">
 			<div class="col-lg-8 col-lg-offset-2">
+	<!--Loans Wrap ENDS-->
+
 		<!--TOP Text STARTS-->
 	<div class="">
 		<h3>Loan Monthly Payment Calculator</h3>
@@ -136,7 +138,7 @@
 </body>
 
 	
-	<!--Social Media-->
+	<!--Social Media START-->
 	<div id="social">
 		<div class="">
 			<div class="row centered">
@@ -159,7 +161,9 @@
 			</div><! --/row -->
 		</div><! --/container -->
 	</div><! --/social -->
+	<!--Social Media END-->
 
+	<!--Footer Wrap-->
 	<div id="footerwrap">
 		<div class="">
 			<div class="row centered">
