--- a/Home.html
+++ b/Home.html
@@ -53,7 +53,7 @@
       </div>
     </div>
 
-	<!--Home Top Wrap Image and Section-->
+	<!--Home Top Wrap Image and Section STARTS-->
 	<div id="homewrap">
 		 <!--It created a white oval. container is on-->
 	    <div class="">
@@ -66,6 +66,7 @@
 			</div><! --/row -->
 	    </div> <!-- /container -->
 	</div><! --/homewrap -->
+	<!--Home Top Wrap Image and Section ENDS-->
 	
 	<!-- Loan, Saving Calculator-->
 	<section id="works"></section>
@@ -84,7 +85,7 @@
 		</div><! --/row -->
 	</div><! --/container -->
 	
-	<!--Social Media-->
+	<!--Social Media STARTS-->
 	<div id="social">
 		<div class="">
 			<div class="row centered">
@@ -107,7 +108,9 @@
 			</div><! --/row -->
 		</div><! --/container -->
 	</div><! --/social -->
+	<!--Social Media ENDS-->
 
+	<!--Footer Wrap-->
 	<div id="footerwrap">
 		<div class="">
 			<div class="row centered">
