--- a/Home.html
+++ b/Home.html
@@ -73,15 +73,20 @@
 	<div class="container">
 		<div class="row centered mt mb">
 			<h1>Calculator Links</h1>
+				
 			<!--Loans Image and Link-->
 			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
 				<a href="Loan.html"><img src="assets/img/portfolio/folio02.png" class="img-responsive"></a>
+			</div>
+			<!--Broken Blank Image and Link-->
+			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
+				<a href="Savings.html"><img src="assets/img/portfolio/folio01.png" class="img-responsive"></a>
 			</div>
 			<!--Savings Image and Link-->
 			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
 				<a href="Savings.html"><img src="assets/img/portfolio/folio03.png" class="img-responsive"></a>
 			</div>
-			
+		
 		</div><! --/row -->
 	</div><! --/container -->
 	
