--- a/Savings.html
+++ b/Savings.html
@@ -119,7 +119,7 @@
 
 				<!--Bottom Text ENDS-->
 				<!---Here Javascript will generate the bar chart -->
-				<canvas id="mainChart"></canvas>
+				<div><canvas id="mainChart"></canvas></div>
 
 				<!--- Here Javascript will generate the table-->
 				<div>
