--- a/Home.html
+++ b/Home.html
@@ -80,7 +80,7 @@
 			</div>
 			<!--Broken Blank Image and Link-->
 			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="Savings.html"><img src="assets/img/portfolio/folio01.png" class="img-responsive"></a>
+				<a href="blank"><img src="assets/img/portfolio/folio01.png" class="img-responsive"></a>
 			</div>
 			<!--Savings Image and Link-->
 			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
